--- a/app/App.css
+++ b/app/App.css
@@ -284,6 +284,31 @@ input[type="radio"]:checked + label.radioButtonLevel {
     } */
 }
 
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(34, 83, 255, 0.5) rgba(0, 0, 0, 0.1);
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(34, 83, 255, 0.5);
+  border-radius: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(34, 83, 255, 0.7);
+}
+
+
+
 @media only screen and (max-width: 700px) {
   section.radioSection {
     flex-direction: column;
